# simstr

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md  readme_ru.md
bench/: CMakeLists.txt  bench.h  bench.js  bench_str.cpp  comments.txt  header.txt  process_result.cpp  result-Xeon E5-2682 v4, WSL Ubuntu 22, Clang-21.txt  result-Xeon E5-2682 v4, WSL Ubuntu 22, GCC-13.txt  result-Xeon E5-2682 v4, Windows 10, Clang 19.txt  result-Xeon E5-2682 v4, Windows 10, MSVC-19.txt  result-Xeon E5-2682 v4, wasm, Chrome 135, Clang-21.txt  results.css  results.html
bench/emscripten/: shell_minimal.html
bench/results/: 000-Xeon E5-2682 v4, Ubuntu 22 (WSL), Clang-21.txt  000-Xeon E5-2682 v4, Ubuntu 22 (WSL), Clang-22.txt  001-Xeon E5-2682 v4, Ubuntu 22 (WSL), Clang-22 libc++.txt  001-Xeon E5-2682 v4, Ubuntu 22 (WSL), GCC-13.txt  002-Xeon E5-2682 v4, Ubuntu 22 (WSL), GCC-15.txt  002-Xeon E5-2682 v4, Windows 10, Clang-19.txt  003-Xeon E5-2682 v4, Windows 10, Clang-22.txt  003-Xeon E5-2682 v4, Windows 10, MSVC-19.txt  004-Xeon E5-2682 v4, WASM Chrome 143, Clang-21.txt  004-Xeon E5-2682 v4, WASM Chrome, Clang-21.txt  004-Xeon E5-2682 v4, WASM Firefox, Clang-21.txt  004-Xeon E5-2682 v4, Windows 10, MSVC-19.txt  005-Xeon E5-2682 v4, WASM Chrome 143, Clang-22.txt
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile  Doxyfile_ru  overview.md  overview_ru.md
for_debug/: readme.md  readme_ru.md  simstr.natvis  simstr_pretty_print.py
include/simstr/: simple_unicode.h  sstring.h  sstring.hpp  strexpr.h
src/: simple_unicode.cpp  sstring.cpp
tests/: CMakeLists.txt  test_expr_only.cpp  test_str.cpp  test_tostrexpr.cpp
